piper: generate homing gcode for setup and stop methods
TODO: check if the stop method is supposed to make "cleanup" moves such
as parking the tool or not.

--- a/notebooks/back_development_guide.ipynb
+++ b/notebooks/back_development_guide.ipynb
@@ -951,11 +951,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Deck and LiquidHandler setup\n",
-    "\n",
-    "A PLR `deck` is required.\n",
-    "\n",
-    "We'll use the default for now."
+    "### Deck and LiquidHandler setup\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Setup the liquidhandler class. This also calls `setup` in the backend."
    ]
   },
   {
@@ -966,12 +970,18 @@
    "source": [
     "# - liquid handler\n",
     "from pylabrobot.liquid_handling import LiquidHandler\n",
-    "# - deck\n",
-    "from pylabrobot.resources.hamilton import STARLetDeck\n",
     "\n",
     "lh = LiquidHandler(backend=backend, deck=STARLetDeck())\n",
     "\n",
     "await lh.setup()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There should be a \"homing\" action in the piper backend."
    ]
   },
   {
@@ -980,6 +990,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "backend.builder.current_action"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A PLR `deck` is required. We'll use the default for now."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# - deck\n",
+    "from pylabrobot.resources.hamilton import STARLetDeck\n",
+    "# - resources\n",
     "from pylabrobot.resources import (\n",
     "    TIP_CAR_480_A00,\n",
     "    PLT_CAR_L5AC_A00,\n",
@@ -1104,7 +1134,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "backend.builder.current_action[\"GCODE\"][3]"
+    "backend.builder.current_action"
    ]
   },
   {
@@ -1124,6 +1154,15 @@
    "outputs": [],
    "source": [
     "await lh.stop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "backend.builder.current_action"
    ]
   },
   {
