--- a/notebooks/deck_development_guide.ipynb
+++ b/notebooks/deck_development_guide.ipynb
@@ -94,11 +94,11 @@
     "\n",
     "class SilverDeck(Deck):\n",
     "  \"\"\" (Ag)nostic deck object.\n",
-    "  \n",
+    "\n",
     "  Boilerplate code written by Rick: https://forums.pylabrobot.org/t/writing-a-new-backend-agnosticity/844/16\n",
     "  \"\"\"\n",
     "\n",
-    "  def __init__(self, \n",
+    "  def __init__(self,\n",
     "               name: str= \"silver_deck\",\n",
     "               # TODO: Update default size.\n",
     "               size_x: float = 250,\n",
@@ -119,7 +119,7 @@
     "      resource_assigned_callback=resource_assigned_callback,\n",
     "      resource_unassigned_callback=resource_unassigned_callback,\n",
     "      origin=origin)\n",
-    "    \n",
+    "\n",
     "    # TODO: write your init code, for example assign a \"trash\" resource:\n",
     "    if not no_trash:\n",
     "      self._assign_trash(location=trash_location)\n",
@@ -205,10 +205,11 @@
    "outputs": [],
    "source": [
     "# Import the resource class\n",
-    "from pylabrobot.resources import Cos_96_DW_1mL\n",
+    "from pylabrobot.resources import Cos_96_DW_1mL, LTF_L\n",
     "\n",
     "# Create an instance\n",
-    "well_plate = Cos_96_DW_1mL(name='plate_01')"
+    "well_plate = Cos_96_DW_1mL(name='plate_01')\n",
+    "tip_rack = LTF_L(name=\"tip rack 1\")"
    ]
   },
   {
@@ -225,6 +226,38 @@
    "outputs": [],
    "source": [
     "well_plate.children[:5]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Likewise, the tip rack has been populated with \"tip spot\" resources, where tips can be placed."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tip_rack.children[:3]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The tip spots on the rack can be filled with tips:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# tip_rack.fill()"
    ]
   },
   {
@@ -256,9 +289,12 @@
    "source": [
     "# Since some robots have \"slots\" or \"rails\", the syntax will vary.\n",
     "# For example, the pyhamilton deck has overriden the \"assign_child_resource\"\n",
-    "# method from \"Resource\", such that it accepts a \"rail\" parameter instead \n",
+    "# method from \"Resource\", such that it accepts a \"rail\" parameter instead\n",
     "# of a location/Coordinate.\n",
-    "deck.assign_child_resource(well_plate, location=Coordinate(10, 10, 0))"
+    "deck.assign_child_resource(well_plate, location=Coordinate(10, 10, 0))\n",
+    "\n",
+    "# Do the same for the tip rack.\n",
+    "deck.assign_child_resource(tip_rack, location=Coordinate(10, 100, 0))"
    ]
   },
   {
@@ -289,6 +325,34 @@
    "source": [
     "# Note that the deck now has an additional child.\n",
     "deck.children"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Deck Serialization\n",
+    "\n",
+    "Lets see what serialization outputs:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "data = deck.serialize()\n",
+    "with open('data/deck.json', 'w', encoding='utf-8') as f:\n",
+    "    json.dump(data, f, indent=4)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## A couple ways of braking PLR"
    ]
   },
   {
@@ -383,6 +447,32 @@
     "else:\n",
     "  print(f\"No error :/\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Pipettin Writer Workspaces\n",
+    "\n",
+    "JSON definition of a workspace: how does it match a PLR \"deck\"?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Object mapping\n",
+    "\n",
+    "### Platforms\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
