start mapping objects

--- a/notebooks/deck_development_guide.ipynb
+++ b/notebooks/deck_development_guide.ipynb
@@ -352,7 +352,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## A couple ways of braking PLR"
+    "## A couple ways of breaking PLR"
    ]
   },
   {
@@ -463,8 +463,25 @@
    "source": [
     "## Object mapping\n",
     "\n",
-    "### Platforms\n",
-    "\n"
+    "I'm not sure if there is a 1-to-1 mapping between Pipttin's and PLR's objects.\n",
+    "\n",
+    "I'll start from here:\n",
+    "\n",
+    "| Pipettin Writer | PyLabRobot |\n",
+    "|-----------------|------------|\n",
+    "| Workspace       | Deck       |\n",
+    "| BUCKET          | Trash      |\n",
+    "| TUBE_RACK       | Plate      |\n",
+    "| TIP_RACK        | TipRack    |\n",
+    "| PETRI_DISH      | ?          |\n",
+    "\n",
+    "Main points:\n",
+    "\n",
+    "1. The first obvious difference is that Pipettin uses \"tube rack\" for everything, while\n",
+    "PLR only seems to have well \"plates\".\n",
+    "2. Second, I'm not sure PLR has an object counterpart to a petri dish.\n",
+    "3. PLR defines objects for wells and tip spots, while PW does not. These are inferred from the platform type, unless it's a custom platform with slots, or a petri dish (which does not really have predefined slots nor locations).\n",
+    "4. To be continued...\n"
    ]
   },
   {
