--- a/notebooks/deck_development_guide.ipynb
+++ b/notebooks/deck_development_guide.ipynb
@@ -452,7 +452,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Pipettin Writer Workspaces\n",
+    "# Pipettin Writer Objects\n",
     "\n",
     "JSON definition of a workspace: how does it match a PLR \"deck\"?"
    ]
@@ -482,6 +482,189 @@
     "2. Second, I'm not sure PLR has an object counterpart to a petri dish.\n",
     "3. PLR defines objects for wells and tip spots, while PW does not. These are inferred from the platform type, unless it's a custom platform with slots, or a petri dish (which does not really have predefined slots nor locations).\n",
     "4. To be continued...\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Tip rack\n",
+    "\n",
+    "¿How should I port PW (pronounced \"pew\" because its cool) objects to PLR objects?\n",
+    "\n",
+    "Here is a relveant code chunk from `carrier_tests.py`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# From \"carrier_tests.py\"\n",
+    "from pylabrobot.resources.itemized_resource import create_equally_spaced\n",
+    "from pylabrobot.resources.ml_star.tip_creators import standard_volume_tip_with_filter\n",
+    "\n",
+    "from pylabrobot.resources.carrier import Carrier, TipCarrier, create_homogenous_carrier_sites\n",
+    "from pylabrobot.resources.coordinate import Coordinate\n",
+    "from pylabrobot.resources.deck import Deck\n",
+    "from pylabrobot.resources.resource import Resource\n",
+    "from pylabrobot.resources.tip_rack import TipRack, TipSpot\n",
+    "\n",
+    "tip_rack = TipRack( # pylint: disable=invalid-name\n",
+    "      name=\"custom tip rack\",\n",
+    "      size_x=5, size_y=5, size_z=5,\n",
+    "      items=create_equally_spaced(TipSpot,\n",
+    "        dx=1, dy=1, dz=1,\n",
+    "        num_items_x=1, num_items_y=1, item_size_x=5, item_size_y=5,\n",
+    "        make_tip=standard_volume_tip_with_filter))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The `create_equally_spaced` seems specially important.\n",
+    "\n",
+    "Paying attention to the `dy` and  `dx` arguments of the `create_equally_spaced` function. Those\n",
+    "arguments seem to define the full size of the platform.\n",
+    "\n",
+    "```python\n",
+    "def create_equally_spaced(\n",
+    "    klass: Type[T],\n",
+    "    num_items_x: int, num_items_y: int,\n",
+    "    dx: float, dy: float, dz: float,\n",
+    "    item_size_x: float, item_size_y: float,\n",
+    "    **kwargs\n",
+    ") -> List[List[T]]:\n",
+    "  \"\"\" Make equally spaced resources.\n",
+    "\n",
+    "  See :class:`ItemizedResource` for more details.\n",
+    "\n",
+    "  Args:\n",
+    "    klass: The class of the resource to create\n",
+    "    num_items_x: The number of items in the x direction\n",
+    "    num_items_y: The number of items in the y direction\n",
+    "    dx: The bottom left corner for items in the left column\n",
+    "    dy: The bottom left corner for items in the top row\n",
+    "    dz: The z coordinate for all items\n",
+    "    item_size_x: The size of the items in the x direction\n",
+    "    item_size_y: The size of the items in the y direction\n",
+    "    **kwargs: Additional keyword arguments to pass to the resource constructor\n",
+    "\n",
+    "  Returns:\n",
+    "    A list of lists of resources. The outer list contains the columns, and the inner list contains\n",
+    "    the items in each column.\n",
+    "  \"\"\"\n",
+    "```\n",
+    "\n",
+    "The `item_size_x` and `item_size_y` arguments to that function define how the items are spaced.\n",
+    "In most platforms this is set to the SBS spacing (9 mm, or its multiples).\n",
+    "\n",
+    "```python\n",
+    "item.location=Coordinate(x=dx + i * item_size_x, y=dy + (num_items_y-j-1) * item_size_y, z=dz)\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lets load a tip rack and convert it to it's PLR conuterpart:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "with open('data/ws_export.json', 'r', encoding='utf-8') as f:\n",
+    "    data = json.load(f)\n",
+    "\n",
+    "# Get a tip rack platform (the first one that shows up).\n",
+    "pew_tip_rack = [d for d in data[\"platforms\"] if d[\"type\"] == \"TIP_RACK\"][0]\n",
+    "\n",
+    "# Get a workspace item matching that platform.\n",
+    "pew_item = [i for i in data[\"workspace\"][\"items\"] if i[\"platform\"] == pew_tip_rack[\"name\"] ][0]\n",
+    "pew_item_pos = pew_item[\"position\"]\n",
+    "pew_item_pos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plr_tip_rack = TipRack(\n",
+    "    name=pew_item[\"name\"],\n",
+    "    size_x=pew_tip_rack[\"width\"],\n",
+    "    size_y=pew_tip_rack[\"length\"],\n",
+    "    size_z=pew_tip_rack[\"height\"],\n",
+    "    # category = \"tip_rack\", # The default.\n",
+    "    model=pew_tip_rack[\"name\"], # Optional.\n",
+    "    items=create_equally_spaced(TipSpot,\n",
+    "      num_items_x=pew_tip_rack[\"wellsColumns\"],\n",
+    "      num_items_y=pew_tip_rack[\"wellsRows\"],\n",
+    "      # dx: The bottom left corner for items in the left column.\n",
+    "      dx=pew_tip_rack[\"firstWellCenterX\"]-pew_tip_rack[\"wellSeparationX\"]/2,\n",
+    "      # dy: The bottom left corner for items in the top row.\n",
+    "      dy=pew_tip_rack[\"firstWellCenterY\"]-pew_tip_rack[\"wellSeparationY\"]/2,\n",
+    "      # dz: The z coordinate for all items.\n",
+    "      dz=-50.5,\n",
+    "      item_size_x=pew_tip_rack[\"wellSeparationX\"],\n",
+    "      item_size_y=pew_tip_rack[\"wellSeparationY\"],\n",
+    "      make_tip=standard_volume_tip_with_filter,\n",
+    "    ),\n",
+    "    with_tips=False\n",
+    "  )\n",
+    "\n",
+    "print(plr_tip_rack)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Note: There is a \"location\" property set to `None`. It does not seem possible to set on instantiation.\n",
+    "\n",
+    "Now lets assign the resource to the SilverDeck..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Workspace"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "workspace = data[\"workspace\"]\n",
+    "\n",
+    "pew_deck = SilverDeck(\n",
+    "  name=workspace[\"name\"],\n",
+    "  # TODO: Update default size.\n",
+    "  size_x = workspace[\"width\"],\n",
+    "  size_y = workspace[\"length\"],\n",
+    "  size_z = workspace[\"height\"],\n",
+    "  resource_assigned_callback = None,\n",
+    "  resource_unassigned_callback = None,\n",
+    "  # TODO: Update default origin.\n",
+    "  # origin = Coordinate(workspace[\"padding\"][\"left\"], workspace[\"padding\"][\"right\"], 0),\n",
+    "  origin = Coordinate(0, 0, 0),\n",
+    "  # TODO: Update default trash location.\n",
+    "  trash_location = Coordinate(x=82.84, y=53.56, z=5),\n",
+    "  no_trash = False\n",
+    ")\n",
+    "\n",
+    "pew_deck"
    ]
   },
   {
@@ -747,9 +930,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "plr_venv",
+   "display_name": ".venv",
    "language": "python",
-   "name": "plr_venv"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -761,7 +944,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
