--- a/notebooks/deck_development_guide.ipynb
+++ b/notebooks/deck_development_guide.ipynb
@@ -558,19 +558,21 @@
     "  \"\"\"\n",
     "```\n",
     "\n",
+    "\n",
     "The `item_size_x` and `item_size_y` arguments to that function define how the items are spaced.\n",
+    "\n",
     "In most platforms this is set to the SBS spacing (9 mm, or its multiples).\n",
     "\n",
     "```python\n",
     "item.location=Coordinate(x=dx + i * item_size_x, y=dy + (num_items_y-j-1) * item_size_y, z=dz)\n",
-    "```"
+    "```\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Lets load a tip rack and convert it to it's PLR conuterpart:"
+    "Lets load the platforms and a workspace, and find the info for a tip rack:"
    ]
   },
   {
@@ -580,16 +582,34 @@
    "outputs": [],
    "source": [
     "import json\n",
-    "with open('data/ws_export.json', 'r', encoding='utf-8') as f:\n",
-    "    data = json.load(f)\n",
+    "# 'data/ws_export.json'\n",
+    "ws_export_file = 'data/pipettin-data-20240203/Workspaces.json'\n",
+    "with open(ws_export_file, 'r', encoding='utf-8') as f:\n",
+    "    workspaces = json.load(f)\n",
+    "workspace = workspaces[0]\n",
+    "\n",
+    "pt_export_file = 'data/pipettin-data-20240203/Platforms.json'\n",
+    "with open(pt_export_file, 'r', encoding='utf-8') as f:\n",
+    "    platforms = json.load(f)\n",
     "\n",
     "# Get a tip rack platform (the first one that shows up).\n",
-    "pew_tip_rack = [d for d in data[\"platforms\"] if d[\"type\"] == \"TIP_RACK\"][0]\n",
+    "pew_tip_racks = [p for p in platforms if p[\"type\"] == \"TIP_RACK\"]\n",
+    "pew_tip_rack = pew_tip_racks[0]\n",
     "\n",
     "# Get a workspace item matching that platform.\n",
-    "pew_item = [i for i in data[\"workspace\"][\"items\"] if i[\"platform\"] == pew_tip_rack[\"name\"] ][0]\n",
+    "pew_items = [i for i in workspace[\"items\"] if i[\"platform\"] == pew_tip_rack[\"name\"] ]\n",
+    "pew_item = pew_items[0]\n",
+    "\n",
+    "# Get the item's position in the workspace.\n",
     "pew_item_pos = pew_item[\"position\"]\n",
-    "pew_item_pos"
+    "pew_item_pos\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now convert the position to a PLR XYZ coordinate object:"
    ]
   },
   {
@@ -598,7 +618,82 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plr_tip_rack = TipRack(\n",
+    "pew_item_location = Coordinate(**pew_item_pos)\n",
+    "pew_item_location"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now get the tip's data:\n",
+    "\n",
+    "> Note that by using `create_equally_spaced` all tips must be identical."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ct_export_file = 'data/pipettin-data-20240203/Containers.json'\n",
+    "with open(ct_export_file, 'r', encoding='utf-8') as f:\n",
+    "    containers = json.load(f)\n",
+    "\n",
+    "pew_item_contents = pew_item[\"content\"]\n",
+    "tip_content = pew_item_contents[0]\n",
+    "\n",
+    "tip_container = [c for c in containers if c[\"name\"]==tip_content[\"container\"]][0]\n",
+    "tip_container"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Get container offset\n",
+    "tip_container_offset = [o for o in pew_tip_rack[\"containers\"] if o[\"container\"] == tip_container[\"name\"]][0]\n",
+    "tip_container_offset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we'll convert it to it's PLR conuterpart using `TipRack` and `create_equally_spaced`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pylabrobot.resources.tip import Tip\n",
+    "\n",
+    "def make_pew_tip():\n",
+    "  \"\"\" Make single tip.\n",
+    "\n",
+    "  Attributes from the Tip class:\n",
+    "    has_filter: whether the tip type has a filter\n",
+    "    total_tip_length: total length of the tip, in in mm\n",
+    "    maximal_volume: maximal volume of the tip, in ul\n",
+    "    fitting_depth: the overlap between the tip and the pipette, in mm\n",
+    "  \"\"\"\n",
+    "  tip = Tip(\n",
+    "    has_filter=False,\n",
+    "    total_tip_length=tip_container[\"length\"],\n",
+    "    maximal_volume=tip_container[\"maxVolume\"],\n",
+    "    fitting_depth=tip_container[\"length\"]-tip_container[\"activeHeight\"]\n",
+    "  )\n",
+    "\n",
+    "  return tip\n",
+    "\n",
+    "tip_rack_item = TipRack(\n",
     "    name=pew_item[\"name\"],\n",
     "    size_x=pew_tip_rack[\"width\"],\n",
     "    size_y=pew_tip_rack[\"length\"],\n",
@@ -613,15 +708,19 @@
     "      # dy: The bottom left corner for items in the top row.\n",
     "      dy=pew_tip_rack[\"firstWellCenterY\"]-pew_tip_rack[\"wellSeparationY\"]/2,\n",
     "      # dz: The z coordinate for all items.\n",
-    "      dz=-50.5,\n",
+    "      # TODO: I dont know how \"dz\" is used later on. Check that it corresponds to activeHeight.\n",
+    "      dz=pew_tip_rack[\"activeHeight\"],\n",
+    "      # XY distance between adjacent items in the grid.\n",
     "      item_size_x=pew_tip_rack[\"wellSeparationX\"],\n",
     "      item_size_y=pew_tip_rack[\"wellSeparationY\"],\n",
-    "      make_tip=standard_volume_tip_with_filter,\n",
+    "      # TODO: This function should be replaced.\n",
+    "      # make_tip=standard_volume_tip_with_filter,\n",
+    "      make_tip=make_pew_tip\n",
     "    ),\n",
     "    with_tips=False\n",
     "  )\n",
     "\n",
-    "print(plr_tip_rack)"
+    "print(tip_rack_item)"
    ]
   },
   {
@@ -646,8 +745,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "workspace = data[\"workspace\"]\n",
-    "\n",
     "pew_deck = SilverDeck(\n",
     "  name=workspace[\"name\"],\n",
     "  # TODO: Update default size.\n",
@@ -668,11 +765,55 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lets assign the TipRack we created earlier to this custom Deck:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "pew_deck.assign_child_resource(resource=tip_rack_item, location=pew_item_location)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Inspect the contents:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Trash(name=trash, location=(082.840, 053.560, 005.000), size_x=80, size_y=120, size_z=50, category=None),\n",
+       " TipRack(name=200ul_tip_rack_MULTITOOL 1, size_x=122, size_y=86, size_z=80, location=None)]"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pew_deck.children"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Yay!"
+   ]
   },
   {
    "cell_type": "markdown",
