--- a/notebooks/deck_development_guide.ipynb
+++ b/notebooks/deck_development_guide.ipynb
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,21 +467,23 @@
     "\n",
     "I'll start from here:\n",
     "\n",
-    "| Pipettin Writer | PyLabRobot |\n",
-    "|-----------------|------------|\n",
-    "| Workspace       | Deck       |\n",
-    "| BUCKET          | Trash      |\n",
-    "| TUBE_RACK       | Plate      |\n",
-    "| TIP_RACK        | TipRack    |\n",
-    "| PETRI_DISH      | ?          |\n",
+    "| Pipettin Writer | PyLabRobot |  PW -> PLR  |  PW <- PLR  |\n",
+    "|-----------------|------------|-------------|-------------|\n",
+    "| Workspace       | Deck       |  Minimal    |  -          |\n",
+    "| BUCKET          | Trash      |  -          |  -          |\n",
+    "| TUBE_RACK       | Plate      |  -          |  -          |\n",
+    "| TIP_RACK        | TipRack    |  Minimal    |  -          |\n",
+    "| PETRI_DISH      | ?          |  -          |  -          |\n",
+    "| Custom platform | ?          |  -          |  -          |\n",
+    "| Tools           | ?          |  -          |  -          |\n",
     "\n",
     "Main points:\n",
     "\n",
     "1. The first obvious difference is that Pipettin uses \"tube rack\" for everything, while\n",
     "PLR only seems to have well \"plates\".\n",
-    "2. Second, I'm not sure PLR has an object counterpart to a petri dish.\n",
-    "3. PLR defines objects for wells and tip spots, while PW does not. These are inferred from the platform type, unless it's a custom platform with slots, or a petri dish (which does not really have predefined slots nor locations).\n",
-    "4. To be continued...\n"
+    "1. Second, I'm not sure PLR has an object counterpart to a petri dish.\n",
+    "2. PLR defines objects for wells and tip spots, while PW does not. These are inferred from the platform type, unless it's a custom platform with slots, or a petri dish (which does not really have predefined slots nor locations).\n",
+    "3. To be continued...\n"
    ]
   },
   {
@@ -497,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -577,9 +579,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'x': 20.19, 'y': 20.19, 'z': 0}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import json\n",
     "# 'data/ws_export.json'\n",
@@ -614,9 +627,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Coordinate(20.19, 20.19, 0)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pew_item_location = Coordinate(**pew_item_pos)\n",
     "pew_item_location"
@@ -633,9 +657,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': '200 uL Tip',\n",
+       " 'description': '200 uL disposable micropipette tip',\n",
+       " 'type': 'tip',\n",
+       " 'length': 50,\n",
+       " 'maxVolume': 200,\n",
+       " 'activeHeight': 45,\n",
+       " 'createdAt': '2024-02-02T00:07:35.182Z',\n",
+       " 'updatedAt': '2024-02-02T00:07:35.182Z',\n",
+       " '__v': 0}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "ct_export_file = 'data/pipettin-data-20240203/Containers.json'\n",
     "with open(ct_export_file, 'r', encoding='utf-8') as f:\n",
@@ -650,9 +693,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'container': '200 uL Tip',\n",
+       " 'containerOffsetZ': 0,\n",
+       " '_id': '65bc3247eac28c4e3a21a333'}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\n",
     "# Get container offset\n",
@@ -669,9 +725,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TipRack(name=200ul_tip_rack_MULTITOOL 1, size_x=122, size_y=86, size_z=80, location=None)\n"
+     ]
+    }
+   ],
    "source": [
     "from pylabrobot.resources.tip import Tip\n",
     "\n",
@@ -730,6 +794,27 @@
     "> Note: There is a \"location\" property set to `None`. It does not seem possible to set on instantiation.\n",
     "\n",
     "Now lets assign the resource to the SilverDeck..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Tube rack\n",
+    "\n",
+    "> Due\n",
+    "\n",
+    "## Trash bucket\n",
+    "\n",
+    "> Due\n",
+    "\n",
+    "## Petri Dish\n",
+    "\n",
+    "> Due\n",
+    "\n",
+    "## Custom platform\n",
+    "\n",
+    "> Due"
    ]
   },
   {
