--- a/notebooks/deck_development_guide.ipynb
+++ b/notebooks/deck_development_guide.ipynb
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -574,27 +574,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "> Note: it's interesting to note that the \"tip\" object in PLR is _not_ a PLR \"resource\".\n",
+    "> \n",
+    "> Tubes, in contrast, are (examples further down)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Lets load the platforms and a workspace, and find the info for a tip rack:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'x': 20.19, 'y': 20.19, 'z': 0}"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import json\n",
+    "\n",
     "# 'data/ws_export.json'\n",
     "ws_export_file = 'data/pipettin-data-20240203/Workspaces.json'\n",
     "with open(ws_export_file, 'r', encoding='utf-8') as f:\n",
@@ -627,21 +626,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Coordinate(20.19, 20.19, 0)"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
+    "from pylabrobot.resources.coordinate import Coordinate\n",
+    "\n",
     "pew_item_location = Coordinate(**pew_item_pos)\n",
     "pew_item_location"
    ]
@@ -657,28 +647,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'name': '200 uL Tip',\n",
-       " 'description': '200 uL disposable micropipette tip',\n",
-       " 'type': 'tip',\n",
-       " 'length': 50,\n",
-       " 'maxVolume': 200,\n",
-       " 'activeHeight': 45,\n",
-       " 'createdAt': '2024-02-02T00:07:35.182Z',\n",
-       " 'updatedAt': '2024-02-02T00:07:35.182Z',\n",
-       " '__v': 0}"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "ct_export_file = 'data/pipettin-data-20240203/Containers.json'\n",
     "with open(ct_export_file, 'r', encoding='utf-8') as f:\n",
@@ -693,24 +664,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'container': '200 uL Tip',\n",
-       " 'containerOffsetZ': 0,\n",
-       " '_id': '65bc3247eac28c4e3a21a333'}"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "\n",
     "# Get container offset\n",
     "tip_container_offset = [o for o in pew_tip_rack[\"containers\"] if o[\"container\"] == tip_container[\"name\"]][0]\n",
     "tip_container_offset"
@@ -725,19 +682,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "TipRack(name=200ul_tip_rack_MULTITOOL 1, size_x=122, size_y=86, size_z=80, location=None)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pylabrobot.resources.tip import Tip\n",
+    "from pylabrobot.resources.itemized_resource import create_equally_spaced\n",
     "\n",
     "def make_pew_tip():\n",
     "  \"\"\" Make single tip.\n",
@@ -874,21 +824,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[Trash(name=trash, location=(082.840, 053.560, 005.000), size_x=80, size_y=120, size_z=50, category=None),\n",
-       " TipRack(name=200ul_tip_rack_MULTITOOL 1, size_x=122, size_y=86, size_z=80, location=None)]"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "pew_deck.children"
    ]
