resources: add pipettin draft resources
tip rack, tube rack, and accessories

--- a/notebooks/deck_development_guide.ipynb
+++ b/notebooks/deck_development_guide.ipynb
@@ -741,9 +741,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> Note: There is a \"location\" property set to `None`. It does not seem possible to set on instantiation.\n",
+    "> Note: There is a \"location\" property set to `None`. It does not seem possible to set on instantiation."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Reference implementations\n",
     "\n",
-    "Now lets assign the resource to the SilverDeck..."
+    "- [ ] Inspect `pylabrobot/resources/ml_star/tip_creators.py`."
    ]
   },
   {
@@ -752,7 +759,180 @@
    "source": [
     "## Tube rack\n",
     "\n",
-    "> Due\n",
+    "There seem to be no abstractions for a \"tube\" in PLR. Furthermore, there seem to be no tube racks either. This is in line with the growing notion that robots can only use plates.\n",
+    "\n",
+    "Pipettin does not care. It will stab a tube if its lid is closed (?).\n",
+    "\n",
+    "Looking at `pylabrobot/resources/container.py`, there seems to be a useful `Container` class:\n",
+    "\n",
+    "> \"_A container is an abstract base class for a resource that can hold liquid._\"\n",
+    "\n",
+    "There is, however, an abstraction for a \"well\" at `pylabrobot/resources/well.py`, which subclasses Container. The only difference is that it assumes a cylindrical shape, and will estimate its maximum volume from the XZ dimensions on initialization.\n",
+    "\n",
+    "It makes sense that I should write a Tube class.\n",
+    "\n",
+    "There are some uncertainties though:\n",
+    "\n",
+    "- Tubes can be moved, wells cannot.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "from typing import Optional\n",
+    "\n",
+    "from pylabrobot.resources.container import Container\n",
+    "\n",
+    "class TubeLid:\n",
+    "  is_open: bool = False\n",
+    "  has_lid: bool = True\n",
+    "  # NOTE: There are many types of tube lids:\n",
+    "  #       \"hinge\" \"screw\" \"cork\" \"rubber_cap\" \"vial_stopper\" \"none\"\n",
+    "  type: str = \"hinge\"\n",
+    "\n",
+    "  def __init__(self, lid_type, is_open: False) -> None:\n",
+    "\n",
+    "    self.type = lid_type\n",
+    "\n",
+    "    if self.type is None:\n",
+    "      self.has_lid = False\n",
+    "      self.is_open = True\n",
+    "    else:\n",
+    "      self.has_lid = True\n",
+    "      self.is_open = is_open\n",
+    "\n",
+    "  def __bool__(self):\n",
+    "    \"\"\"Shortcut to evaluate the trueness of a lid.\n",
+    "\n",
+    "    If there is no lid, this will be true. If there is a lid, and it is open, this will be true too.\n",
+    "\n",
+    "    It will be false only when there is a lid and it is not open.\n",
+    "    \"\"\"\n",
+    "    return self.is_open\n",
+    "\n",
+    "class Tube(Container):\n",
+    "  \"\"\" Base class for Tube resources.\"\"\"\n",
+    "\n",
+    "  lid: TubeLid = None\n",
+    "\n",
+    "  def __init__(\n",
+    "      self,\n",
+    "      name: str,\n",
+    "      size_x: float, size_y: float, size_z: float = 9,\n",
+    "      category: str = \"tube\",\n",
+    "      volume: float = 0,\n",
+    "      max_volume: Optional[float] = None,\n",
+    "      model: Optional[str] = None,\n",
+    "      lid: TubeLid = None):\n",
+    "    \"\"\" Create a new well.\n",
+    "\n",
+    "    Args:\n",
+    "      name: Name of the well.\n",
+    "      size_x: Internal size of the tube in the x direction.\n",
+    "      size_y: Internal size of the tube in the y direction. Equal to 'size_x' in square or round Tubes.\n",
+    "      size_z: Maximum internal size of the tube in the z direction.\n",
+    "      category: Category of the well.\n",
+    "      volume: Initial volume of the well.\n",
+    "      max_volume: Maximum volume of the well. If not specified, the well will be seen as a cylinder\n",
+    "        and the max volume will be computed based on size_x, size_y, and size_z.\n",
+    "      lid: Initial status of the tube's lid. True when closed, False when open, None when lid-less.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    if lid is None:\n",
+    "      # Defaults to \"no lid\".\n",
+    "      self.lid = TubeLid(lid_type=None)\n",
+    "\n",
+    "    if max_volume is None:\n",
+    "      raise ValueError(\"The maximum volume for tubes must be specified.\")\n",
+    "\n",
+    "    super().__init__(name, size_x=size_x, size_y=size_y, size_z=size_z, category=category,\n",
+    "      volume=volume, max_volume=max_volume, model=model)\n",
+    "\n",
+    "    def level(self):\n",
+    "      \"\"\"Calculate the liquid level (height) from the current volume.\"\"\"\n",
+    "      volume = self.volume\n",
+    "\n",
+    "  def level_epp(self, volume_ul):\n",
+    "    # Volume tracker\n",
+    "    volume = 0.0\n",
+    "\n",
+    "    # Base height for pipetting.\n",
+    "    height = 0.2\n",
+    "\n",
+    "    # Tube bottom. At 1.1 mm from the external bottom.\n",
+    "    stage_vol = 5.0\n",
+    "    if volume_ul <= stage_vol:\n",
+    "      return height\n",
+    "    else:\n",
+    "      volume -= stage_vol\n",
+    "\n",
+    "    # Tube cone.\n",
+    "    cone_length=17.8\n",
+    "    cone_r_minor=3.6/2\n",
+    "    cone_r_major=8.7/2\n",
+    "    wall_angle = math.atan((cone_r_major - cone_r_minor) / cone_length)\n",
+    "    # stage_vol = self.volume_truncated_cone(cone_r_minor, cone_r_major, cone_length)\n",
+    "    trunc_vol = self.cone_volume(wall_angle, cone_r_minor)\n",
+    "\n",
+    "    if volume >= stage_vol:\n",
+    "      volume -= stage_vol\n",
+    "      height += cone_length\n",
+    "    else:\n",
+    "      level = self.cone_level(volume + trunc_vol, wall_angle) - self.cone_height(wall_angle, cone_r_minor)\n",
+    "\n",
+    "\n",
+    "    return height\n",
+    "\n",
+    "  @staticmethod\n",
+    "  def volume_truncated_cone(radius1, radius2, height):\n",
+    "      \"\"\"\n",
+    "      Calculate the volume of a truncated cone given the radii of its two bases and its height.\n",
+    "      Formula used: V = (1/3) * π * h * (r1^2 + r2^2 + r1 * r2)\n",
+    "      where r1 and r2 are the radii of the two bases, h is the height, and π is pi (3.14159).\n",
+    "      \"\"\"\n",
+    "      volume = (1/3) * 3.14159 * height * (radius1**2 + radius2**2 + radius1 * radius2)\n",
+    "      return volume\n",
+    "\n",
+    "  def cone_level(self, vol, a):\n",
+    "    # math.tan(a) = r / h\n",
+    "    # r = math.tan(a) * h\n",
+    "    # V = (1/3) * math.pi * (r**2) * h\n",
+    "    # V = (1/3) * math.pi * ( (math.tan(a)*h)**2 ) * h\n",
+    "    # V = (1/3) * math.pi * (math.tan(a)**2) * (h**2) * h\n",
+    "    # V = (1/3) * math.pi * (math.tan(a)**2) * (h**3)\n",
+    "    # V / ((1/3) * math.pi * (math.tan(a)**2)) = (h**3)\n",
+    "    h = (vol / ((1/3) * math.pi * (math.tan(a)**2)))**(1/3)\n",
+    "    return h\n",
+    "\n",
+    "  @staticmethod\n",
+    "  def cone_height(a, r):\n",
+    "    # math.tan(a) = r / h\n",
+    "    h = r / math.tan(a)\n",
+    "    return h\n",
+    "\n",
+    "  def cone_volume(self, a, r):\n",
+    "    h = self.cone_height(a, r)\n",
+    "    vol = (1/3) * math.pi * (r**2) * h\n",
+    "    return vol\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "## Trash bucket\n",
     "\n",
