--- a/notebooks/deck_development_guide.ipynb
+++ b/notebooks/deck_development_guide.ipynb
@@ -530,8 +530,15 @@
     "\n",
     "Paying attention to the `dy` and  `dx` arguments of the `create_equally_spaced` function. Those\n",
     "arguments seem to define the full size of the platform.\n",
-    "\n",
-    "```python\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def create_equally_spaced(\n",
     "    klass: Type[T],\n",
     "    num_items_x: int, num_items_y: int,\n",
@@ -558,16 +565,27 @@
     "    A list of lists of resources. The outer list contains the columns, and the inner list contains\n",
     "    the items in each column.\n",
     "  \"\"\"\n",
-    "```\n",
-    "\n",
-    "\n",
+    "  pass"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "The `item_size_x` and `item_size_y` arguments to that function define how the items are spaced.\n",
     "\n",
     "In most platforms this is set to the SBS spacing (9 mm, or its multiples).\n",
     "\n",
-    "```python\n",
-    "item.location=Coordinate(x=dx + i * item_size_x, y=dy + (num_items_y-j-1) * item_size_y, z=dz)\n",
-    "```\n"
+    "The `create_equally_spaced` function defines an item's location with the following (familiar) math:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "item.location = Coordinate(x=dx + i * item_size_x, y=dy + (num_items_y-j-1) * item_size_y, z=dz)"
    ]
   },
   {
@@ -575,8 +593,8 @@
    "metadata": {},
    "source": [
     "> Note: it's interesting to note that the \"tip\" object in PLR is _not_ a PLR \"resource\".\n",
-    "> \n",
-    "> Tubes, in contrast, are (examples further down)."
+    ">  \n",
+    "> Tubes, in contrast, must be resources (examples further down), just as Wells are."
    ]
   },
   {
@@ -907,6 +925,13 @@
    "metadata": {},
    "source": [
     "Yay!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Code form PLR notebooks"
    ]
   },
   {
