guides: review back guide
a few things changed in PLR since

--- a/notebooks/back_development_guide.ipynb
+++ b/notebooks/back_development_guide.ipynb
@@ -19,6 +19,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install pylabrobot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
@@ -76,64 +85,66 @@
     "class EchoBackend(LiquidHandlerBackend):\n",
     "    \"\"\" Yet another Chatter box backend for 'How to Open Source' \"\"\"\n",
     "\n",
+    "    commands = []\n",
+    "    \"\"\"Just a list to store incoming data, forlater inspection\"\"\"\n",
+    "\n",
     "    def __init__(self, num_channels: int = 1):\n",
     "        \"\"\"Init method for the EchoBackend.\"\"\"\n",
-    "        print(f\"Instantiating the EchoBackend with num_channels={num_channels}\")\n",
+    "        print(f\"EchoBackend - Instantiating the EchoBackend with num_channels={num_channels}\")\n",
     "        super().__init__()\n",
     "        self._num_channels = num_channels\n",
-    "        self.commands = []\n",
     "\n",
     "    async def setup(self):\n",
     "        await super().setup()\n",
-    "        print(\"Setting up the robot.\")\n",
+    "        print(\"EchoBackend - Setting up the robot.\")\n",
     "\n",
     "    async def stop(self):\n",
     "        await super().stop()\n",
-    "        print(\"Stopping the robot.\")\n",
+    "        print(\"EchoBackend - Stopping the robot.\")\n",
     "\n",
     "    @property\n",
     "    def num_channels(self) -> int:\n",
     "        return self._num_channels\n",
     "\n",
     "    async def assigned_resource_callback(self, resource: Resource):\n",
-    "        print(f\"Resource {resource.name} was assigned to the robot.\")\n",
+    "        print(f\"EchoBackend - Resource {resource.name} was assigned to the robot: \" + pformat(resource.serialize))\n",
     "\n",
     "    async def unassigned_resource_callback(self, name: str):\n",
-    "        print(f\"Resource {name} was unassigned from the robot.\")\n",
+    "        print(f\"EchoBackend - Resource with name '{name}' was unassigned from the robot.\")\n",
     "\n",
     "    # Atomic implemented in hardware.\n",
     "    async def pick_up_tips(self, ops: List[Pickup], use_channels: List[int], **backend_kwargs):\n",
-    "        print(f\"Picking up tips {ops}.\")\n",
+    "        print(f\"EchoBackend - {len(self.commands)} - Picking up tips {ops}.\")\n",
     "        self.commands.append({\"cmd\": \"pick_up_tips\", \"ops\": ops, \"use_channels\": use_channels, **backend_kwargs})\n",
     "\n",
     "    async def drop_tips(self, ops: List[Drop], use_channels: List[int], **backend_kwargs):\n",
-    "        print(f\"Dropping tips {ops}.\")\n",
+    "        print(f\"EchoBackend - {len(self.commands)} - Dropping tips {ops}.\")\n",
     "        self.commands.append({\"cmd\": \"drop_tips\", \"ops\": ops, \"use_channels\": use_channels, **backend_kwargs})\n",
     "\n",
     "    async def aspirate(self, ops: List[Aspiration], use_channels: List[int], **backend_kwargs):\n",
-    "        print(f\"Aspirating {ops}.\")\n",
+    "        print(f\"EchoBackend - {len(self.commands)} - Aspirating {ops}.\")\n",
     "        self.commands.append({\"cmd\": \"aspirate\", \"ops\": ops, \"use_channels\": use_channels, **backend_kwargs})\n",
     "\n",
     "    async def dispense(self, ops: List[Dispense], use_channels: List[int], **backend_kwargs):\n",
-    "        print(f\"Dispensing {ops}.\")\n",
+    "        print(f\"EchoBackend - {len(self.commands)} - Dispensing {ops}.\")\n",
     "        self.commands.append({\"cmd\": \"dispense\", \"ops\": ops, \"use_channels\": use_channels, **backend_kwargs})\n",
     "\n",
     "    # Atomic actions not implemented in hardware.\n",
-    "    async def pick_up_tips96(self, pickup: PickupTipRack):\n",
-    "        raise NotImplementedError(\"The backend does not support the CoRe 96.\")\n",
+    "    async def pick_up_tips96(self, pickup: PickupTipRack, **backend_kwargs):\n",
+    "        raise NotImplementedError(\"EchoBackend - The backend does not support the CoRe 96.\")\n",
     "\n",
-    "    async def drop_tips96(self, drop: DropTipRack):\n",
-    "        raise NotImplementedError(\"The backend does not support the CoRe 96.\")\n",
+    "    async def drop_tips96(self, drop: DropTipRack, **backend_kwargs):\n",
+    "        raise NotImplementedError(\"EchoBackend - The backend does not support the CoRe 96.\")\n",
     "\n",
     "    async def aspirate96(self, aspiration: AspirationPlate):\n",
-    "        raise NotImplementedError(\"The backend does not support the CoRe 96.\")\n",
+    "        raise NotImplementedError(\"EchoBackend - The backend does not support the CoRe 96.\")\n",
     "\n",
     "    async def dispense96(self, dispense: DispensePlate):\n",
-    "        raise NotImplementedError(\"The backend does not support the CoRe 96.\")\n",
+    "        raise NotImplementedError(\"EchoBackend - The backend does not support the CoRe 96.\")\n",
     "\n",
-    "    async def move_resource(self, move: Move):\n",
+    "    async def move_resource(self, move: Move, **backend_kwargs):\n",
     "        \"\"\" Move the specified lid within the robot. \"\"\"\n",
-    "        raise NotImplementedError(\"Moving resources is not implemented yet.\")\n"
+    "        raise NotImplementedError(\"EchoBackend - Moving resources is not implemented yet.\")\n"
    ]
   },
   {
@@ -141,7 +152,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Usage examples\n",
+    "### Usage example\n",
     "\n",
     "This new class can be used immediately, as is."
    ]
@@ -162,9 +173,7 @@
    },
    "outputs": [],
    "source": [
-    "backend = EchoBackend(num_channels=1)\n",
-    "\n",
-    "backend.num_channels"
+    "backend = EchoBackend(num_channels=1)"
    ]
   },
   {
@@ -172,7 +181,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create an instance of a \"liquid handler\" with the Hamilton deck (for example):"
+    "Create an instance of a \"liquid handler\" with, for example, a Hamilton deck:"
    ]
   },
   {
@@ -189,11 +198,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "While using the \"liquid handler\" we see some messages from the EchoBackend.\n",
+    "\n",
+    "It has received data about some kind of resources assigned to the deck."
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Populate the deck with labware:"
+    "Populate the deck with labware, that may be interesting:"
    ]
   },
   {
@@ -219,9 +237,32 @@
     "plt_car = PLT_CAR_L5AC_A00(name='plate carrier')\n",
     "plt_car[0] = Cos_96_DW_1mL(name='plate_01')\n",
     "\n",
-    "lh.deck.assign_child_resource(plt_car, rails=15)\n",
+    "lh.deck.assign_child_resource(plt_car, rails=15)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "More of the \"resource assigned to the robot\" messages. Not much fun so far.\n",
     "\n",
+    "To recap, let's check what the liquid handler has so far:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "lh.summary()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### What's going on at the back?"
    ]
   },
   {
@@ -229,7 +270,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Pick up a tip:"
+    "PLR defines that the backend must implement a few \"atomic\" actions (e.g. aspirate, dispense, etc.).\n",
+    "\n",
+    "Lets pick up a tip."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Tips: pick_up_tips"
    ]
   },
   {
@@ -245,6 +295,59 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Aha! This is interesting...\n",
+    "\n",
+    "Now the backend is _supposed_ to pick up tips, using that information in some way. But which way is that?\n",
+    "\n",
+    "This dummy backend can be used to \"inspect\" the objects passed to it, \n",
+    "and help us learn what to expect when writing a _real_ backend.\n",
+    "\n",
+    "Let's use the \"commands list\" we added to the EchoBackend to investigate how. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "backend.commands[-1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It seems we get two pieces of info:\n",
+    "\n",
+    "- A list with one \"operation\", offering tip parameters.\n",
+    "- A list of \"channels\" to use for the operation.\n",
+    "\n",
+    "Let's inspect the operation:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pick_up_op = backend.commands[-1][\"ops\"][0]\n",
+    "\n",
+    "pprint(pick_up_op)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I'm going to guess that the \"resource\" in there is the same object as the TipSpot in the TipRack:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -252,7 +355,55 @@
    },
    "outputs": [],
    "source": [
-    "tiprack[\"A1\"]"
+    "pick_up_op.resource is tiprack[\"A1\"][0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Cooooorrrectooooo!\n",
+    "\n",
+    "So, we're expected to move the robot to that tip, place it into the requested channels, using some \"offset\"."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "Lets inspect the \"tip spot\" a bit more closely:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "tip_spot = pick_up_op.resource\n",
+    "\n",
+    "print(tip_spot)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ok, but... what can it do?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dir(tip_spot)"
    ]
   },
   {
@@ -260,44 +411,54 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Inspect the objects passed to the backend:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "pprint(lh.backend.commands)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "Inspect the tip pickup operation:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "pick_up_ops = lh.backend.commands[0][\"ops\"]\n",
-    "pick_up_op = pick_up_ops[0]\n",
-    "tip = pick_up_op.tip\n",
+    "I think `get_absolute_location` looks interesting.\n",
     "\n",
-    "pprint(pick_up_op)\n",
-    "pprint(pick_up_op.serialize())"
+    "Perhaps we can get the absolute spatial coordinate of the tip's location:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "coordinate = tip_spot.get_absolute_location()\n",
+    "\n",
+    "print(coordinate)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Yep, seems important. But what does the Z coordinate mean? Is it the \"tip\" or the \"top\"?\n",
+    "\n",
+    "Or is it something else?\n",
+    "\n",
+    "The `tip` object in the operation may shed some light here:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pick_up_op.tip"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Surprisingly, it is not a \"PLR resource\". It does have, however, two relevant attributes:\n",
+    "\n",
+    "- fitting depth: which I figure is the distance that the pipette inserts istelf into the tip from the top side in order to make the seal.\n",
+    "- total length: well, that.\n",
+    "\n",
+    "The only variable here is how the Z coordinate of the tip spot relates to the tip."
    ]
   },
   {
@@ -305,42 +466,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Get the absolute spatial coordinate of the tip's location:"
+    "Before I move on, lets look at the \"offset\" in the pick up operation.\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "coordinate = pick_up_op.get_absolute_location()\n",
-    "\n",
-    "print(coordinate)\n",
-    "\n",
-    "coordinate.serialize()"
+    "# Prints \"Default\" which only indicates that this should be replaced by a default value.\n",
+    "print(pick_up_op.offset)"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Nothing apparently.\n",
+    "\n",
+    "FYI, the source states that the offsets are a:\n",
+    "\n",
+    "> List of offsets for each channel, a translation that will be applied to the tip drop location. If `None`, no offset will be applied.\n",
+    "\n",
+    "The offsets in the list are expected to be `Coordinate` objects.\n",
+    "\n",
+    "<!-- This seems to no longer apply:\n",
+    "\n",
     "The offset attribute, unless altered by the lh or backend, is a \"Default\" object.\n",
     "\n",
-    "It has no information whatsoever, other than hinting that it should be replaced by a default value."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
+    "It has no information whatsoever, other than hinting that it should be replaced by a default value.\n",
+    "\n",
+    "```\n",
     "from pylabrobot.default import get_value\n",
     "from pylabrobot.resources.coordinate import Coordinate\n",
     "\n",
@@ -351,7 +508,16 @@
     "\n",
     "# A default value can be set like this:\n",
     "default_offset = get_value(value=pick_up_op.offset, default=origin)\n",
-    "print(default_offset)"
+    "print(default_offset)\n",
+    "```\n",
+    "-->"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Well: aspirate"
    ]
   },
   {
@@ -394,19 +560,27 @@
     "ops = lh.backend.commands[1][\"ops\"]\n",
     "op = ops[0]\n",
     "\n",
+    "pprint(op)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Some useful parameters\n",
     "op.volume\n",
-    "op.get_absolute_location()\n",
+    "op.resource.get_absolute_location()\n",
     "op.blow_out_air_volume\n",
     "op.liquid_height\n",
     "op.flow_rate\n",
     "\n",
     "# The current volume is harder to access, this is defined in the \"Container\" class.\n",
     "op.resource.tracker.get_used_volume()\n",
+    "#pprint(op.resource.tracker.serialize())\n",
     "\n",
-    "# Print everything\n",
-    "pprint(op)\n",
-    "pprint(op.serialize())"
+    "pprint(op.resource.serialize())"
    ]
   },
   {
@@ -474,7 +648,7 @@
     "\n",
     "# Some useful parameters\n",
     "op.volume\n",
-    "op.get_absolute_location()\n",
+    "op.resource.get_absolute_location()\n",
     "op.blow_out_air_volume\n",
     "op.liquid_height\n",
     "op.flow_rate\n",
@@ -484,7 +658,7 @@
     "\n",
     "# Print everything\n",
     "pprint(op)\n",
-    "pprint(op.serialize())"
+    "pprint(op.resource.serialize())"
    ]
   },
   {
@@ -1286,7 +1460,7 @@
     "# Platformless tip pickup\n",
     "minimal_tip_data = {'maxVolume': 160, 'tipLength': 50.0, 'volume': 0}\n",
     "pick_up_tip_action_coords = {\n",
-    "    'args': {'coords': {\"x\": 20, \"y\": 200, \"z\": 30}, \n",
+    "    'args': {'coords': {\"x\": 20, \"y\": 200, \"z\": 30},\n",
     "             'tool': 'P200',\n",
     "             'tip': minimal_tip_data},\n",
     "    'cmd': 'PICK_TIP'}\n",
@@ -1690,7 +1864,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "pylabrobot-venv",
    "language": "python",
    "name": "python3"
   },
@@ -1704,7 +1878,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
