guide: fix install instructions for piper

--- a/notebooks/back_development_guide.ipynb
+++ b/notebooks/back_development_guide.ipynb
@@ -905,9 +905,8 @@
     "\n",
     "```bash\n",
     "source .venv/bin/activate\n",
-    "pip install -U -e ~/Projects/GOSH/gosh-col-dev/pipettin-grbl/code/klipper/piper\n",
-    "pip install -U -e ~/Projects/GOSH/gosh-col-dev/pipettin-grbl/code/newt\n",
-    "pip install -U -e ~/Projects/GOSH/gosh-col-dev/pylabrobot[dev]\n",
+    "pip install git+https://gitlab.com/pipettin-bot/pipettin-piper.git\n",
+    "pip install pylabrobot[dev]\n",
     "```\n",
     "\n",
     "Run those commands each time you want to test out changes.\n",
@@ -924,21 +923,16 @@
     "!echo $VIRTUAL_ENV\n",
     "\n",
     "import os, sys\n",
-    "print(\"Current working directory: \" + os.getcwd())\n",
-    "print(\"Using python: \" + sys.executable)\n",
     "\n",
-    "%load_ext autoreload  # ???\n",
-    "%autoreload 2  # ???"
+    "print(\"Current working directory: \" + os.getcwd())\n",
+    "print(\"Using python: \" + sys.executable)\n"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Import modules by path\n",
-    "\n",
-    "You can, instead, import the `newt` and `piper` modules directly by path."
+    "Install `piper` from git:"
    ]
   },
   {
@@ -948,13 +942,14 @@
    "outputs": [],
    "source": [
     "# Install dependencies\n",
-    "# %pip install jsonschema\n",
-    "\n",
-    "import sys\n",
-    "sys.path.append(\"../../pipettin-grbl/code/newt/\")\n",
-    "import newt\n",
-    "\n",
-    "dir(newt)"
+    "!pip install git+https://gitlab.com/pipettin-bot/pipettin-piper.git"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This will also have installed `newt`, an important dependency to link `piper` with other programs."
    ]
   },
   {
@@ -963,25 +958,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Install dependencies\n",
-    "# %pip install websockets pymongo aiohttp python-socketio\n",
-    "\n",
-    "import sys\n",
-    "sys.path.append(\"../../pipettin-grbl/code/klipper/piper\")\n",
-    "import piper\n",
-    "\n",
-    "dir(piper)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import sys\n",
-    "sys.path.append(\"../\")\n",
-    "import pylabrobot"
+    "import piper, newt"
    ]
   },
   {
